[css-flexbox] Need to subtract the scrollbar for the override size

The override size does not in fact include the scrollbar, so we need to
subtract it before returning it as the base for the percentage size
calculation.

R=mstensho@chromium.org

Bug: 770604
Change-Id: I5eb50eaedc4e32d676b550c4c10e2d7b8e9d604b
Reviewed-on: https://chromium-review.googlesource.com/780519
Commit-Queue: Christian Biesinger <cbiesinger@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518831}
Former-commit-id: ad34d927de079ce7b631c2f343a866469b060d54